--- a/reverse_array/CMakeLists.txt
+++ b/reverse_array/CMakeLists.txt
@@ -1,18 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
 
-# Enable CUDA for this directory
-enable_language(CUDA)
-
-# Set CUDA language property for source files
-set_source_files_properties(reverse.cpp PROPERTIES LANGUAGE CUDA)
-
 # Create the reverse array executable
 add_executable(reverse_array reverse.cpp)
 
-# Set required CUDA properties and flags
-set_target_properties(reverse_array PROPERTIES 
-    CUDA_SEPARABLE_COMPILATION ON
-    CUDA_ARCHITECTURES 70)  # For Tesla T4 GPU
-
-# Set C++ standard
-set_property(TARGET reverse_array PROPERTY CXX_STANDARD 17)
+# Inherits CMAKE_CUDA_ARCHITECTURES and C++ standard from root
