--- a/reverse_array/CMakeLists.txt
+++ b/reverse_array/CMakeLists.txt
@@ -1,6 +1,2 @@
-cmake_minimum_required(VERSION 3.20)
-
-# Create the reverse array executable
+set_source_files_properties(reverse.cpp PROPERTIES LANGUAGE CUDA)
 add_executable(reverse_array reverse.cpp)
-
-# Inherits CMAKE_CUDA_ARCHITECTURES and C++ standard from root
